[package]
name = "rizz"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "rizz_macros"
]

[dependencies]
rizz_macros = { path = "rizz_macros", version = "0.1.0" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106" }
serde_rusqlite = { version = "0.33.1" }
thiserror = { version = "1.0.48" }
tokio-rusqlite = { version = "0.4.0" }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
