[package]
name = "ryzz"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/swlkr/ryzz"
repository = "https://github.com/swlkr/ryzz"
keywords = ["drizzle", "orm", "sqlite", "db", "database"]
description = "A sqlite query builder and automatic schema migrator. Don't call it an orm"

[workspace]
members = [
  "ryzz_macros"
]

[dependencies]
ryzz_macros = { path = "ryzz_macros", version = "0.2.0" }
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106" }
serde_rusqlite = { version = "0.33.1" }
thiserror = { version = "1.0.48" }
tokio-rusqlite = { version = "0.4.0" }
seq-macro = "0.3"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
