[package]
name = "ryzz_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/swlkr/ryzz"
repository = "https://github.com/swlkr/ryzz"
keywords = ["ryzz_macros"]
description = "Macros for the ryzz crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro-error = "1"

